--- a/style.css
+++ b/style.css
@@ -1,4 +1,206 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 #para1 {
     text-align: justify;
 }
 
+nav {
+    display: flex;
+    padding: 2rem 2rem;
+    justify-content: space-between;
+    width: 100%;
+    z-index: 1000;
+}
+
+a {
+    text-decoration: none;
+    color: rgb(127, 127, 127);
+}
+
+a:hover {
+    color: black;
+}
+
+.navbar-item {
+    list-style-type: none;
+    display: inline;
+    gap: 1rem;
+    margin: 1rem;
+    font-size: 1.2rem;
+}
+
+.btn {
+    cursor: pointer;
+    box-shadow: none;
+    border: none;
+    font-size: 1.1rem;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+    background-color: blue;
+    font-weight: 200;
+    color: white;
+    margin-right: 0.2rem;
+}
+
+.btn:hover {
+    background-color: white;
+    color: blue;
+    box-shadow: 0 0 0.5rem blue;
+}
+
+#Abt {
+    margin: 4%
+}
+
+#abt-title {
+    text-align: center;
+    font-size: 3.5rem;
+    padding: 0.1rem;
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    margin-bottom: 1.1rem;
+}
+
+#abt-para {
+    text-align: center;
+    font-weight: 200;
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+#abt-cont {
+    width: 60.2%;
+    text-align: center;
+    margin-left: 20.3%;
+}
+
+
+#best-sellers {
+    margin: 30px;
+    margin-top: 5%;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 2rem;
+    margin-top: 2rem;
+}
+
+.col {
+    width: 45%;
+    box-sizing: border-box;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    display: block;
+    border-radius: 0.5rem;
+    margin: 0.5rem;
+}
+
+.bs-title {
+    padding: 0.1rem;
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 2.5rem;
+}
+
+.col p{
+    font-weight: 300;
+    padding-bottom: 1rem;
+    font-size: 1.1rem;
+}
+
+#footer {
+    background-color: black;
+    width: 100%;
+    padding: 1.3rem 0;
+    margin-top: 2rem;
+}
+
+#ft-cont {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+#ft-cont ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    gap: 2rem;
+}
+
+.ft-item, span {
+    color: white;
+    text-align: center;
+}
+
+@media screen and (max-width: 1024px) {
+    .col {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    #Abt {
+        width: 100%;
+        max-width: 100%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .col {
+            width: 100%;
+            max-width: 100%;
+        }
+    
+    #Abt {
+            width: 100%;
+            max-width: 100%;
+        }
+
+    .navbar-item, .ft-item {
+        display: none;
+    }
+
+}
+
+@media screen and (max-width: 600px) {
+    .col {
+            width: 100%;
+            max-width: 100%;
+            height: auto;
+        }
+    
+    #Abt {
+            width: 100%;
+            max-width: 100%;
+            height: auto
+        }
+    
+    .navbar-item, .ft-item {
+            display: none;
+        }
+
+    h1, h2, p, span {
+        font-size: 0.87rem;
+    }
+
+}
